ajout de produit dans le panier

--- a/index.html
+++ b/index.html
@@ -62,15 +62,7 @@
                   <h2 class="cart-title">Cart</h2>
 
                   <div class="cart-content">
-                    <div class="cart-box">
-                      <img src="images/img10.png" alt="cart-img" class="cart-img">
-                      <div class="detail-box">
-                        <div class="cart-product-title">PINK FLOWER TREE</div>
-                        <div class="cart-price">$16</div>
-                        <input type="number" value="1" class="cart-quantity">
-                      </div>
-                      <i class="fa-regular fa-trash-can cart-remove"></i>
-                    </div>
+
                   </div>
                   <div class="total">
                     <div class="total-title">Total:</div>
@@ -130,10 +122,10 @@
             <div class="slider">
               <div class="slide">
                 <div class="top-card">
-                <img src="images/img10.png" alt="image 10">
+                <img src="images/img10.png" alt="image 10" class="product-img">
                 <div class="search-icons">
                   <i class="fa fa-search"></i>
-                  <i class="fas fa-bag-shopping"></i>
+                  <i class="fas fa-bag-shopping add-cart"></i>
                   <i class="fa-solid fa-shuffle"></i>
                 </div></div>
                 <div class="stars">
@@ -143,15 +135,15 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
-                <a href="">PINK FLOWER TREE</a><br><br>
-                <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
+                <a href="" class="product-title">PINKE FLOWER TREE</a><br><br>
+                <span class="price"><hr><br>$16.00   </span> <del>$19.00</del><br><br>
               </div>
               <div class="slide">
                 <div class="top-card">
-                <img src="images/img11.png" alt="image 11">
+                <img src="images/img11.png" alt="image 11" class="product-img">
                 <div class="search-icons">
                   <i class="fa fa-search"></i>
-                  <i class="fas fa-bag-shopping"></i>
+                  <i class="fas fa-bag-shopping add-cart"></i>
                   <i class="fa-solid fa-shuffle"></i>
                 </div>
               </div>
@@ -162,15 +154,15 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
-                <a href="">PREMIUM JOYFUL</a><br><br>
-                <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
+                <a href="" class="product-title">PREMIUM JOYFUL</a><br><br>
+                <span class="price"><hr><br>$16.00   </span> <del>$19.00</del><br><br>
               </div>
               <div class="slide">
                 <div class="top-card">
-                <img src="images/img12.png" alt="image 12">
+                <img src="images/img12.png" alt="image 12" class="product-img">
                 <div class="search-icons">
                   <i class="fa fa-search"></i>
-                  <i class="fas fa-bag-shopping"></i>
+                  <i class="fas fa-bag-shopping add-cart"></i>
                   <i class="fa-solid fa-shuffle"></i>
                 </div>
               </div>
@@ -181,15 +173,15 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
-                <a href="">THE WHITE ROSE</a><br><br>
-                <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
+                <a href="" class="product-title">THE WHITE ROSE</a><br><br>
+                <span class="price"><hr><br>$16.00   </span> <del>$19.00</del><br><br>
               </div>
               <div class="slide">
                 <div class="top-card">
-                <img src="images/img13.png" alt="image 13">
+                <img src="images/img13.png" alt="image 13" class="product-img">
                 <div class="search-icons">
                   <i class="fa fa-search"></i>
-                  <i class="fas fa-bag-shopping"></i>
+                  <i class="fas fa-bag-shopping add-cart"></i>
                   <i class="fa-solid fa-shuffle"></i>
                 </div>
               </div>
@@ -200,15 +192,15 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
-                <a href="">PINK FLOWER TREE</a><br><br>
-                <span class="price"><hr><br>$16.00  <del>$19.00</del></span><br><br>
+                <a href="" class="product-title">PIN FLOWER TREE</a><br><br>
+                <span class="price"><hr><br>$16.00   </span><del>$19.00</del><br><br>
               </div>
               <div class="slide">
                 <div class="top-card">
-                <img src="images/img16.png" alt="image 16">
+                <img src="images/img16.png" alt="image 16" class="product-img">
                 <div class="search-icons">
                   <i class="fa fa-search"></i>
-                  <i class="fas fa-bag-shopping"></i>
+                  <i class="fas fa-bag-shopping add-cart"></i>
                   <i class="fa-solid fa-shuffle"></i>
                 </div>
               </div>
@@ -219,15 +211,15 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
-                <a href="">THE WHITE ROSE</a><br><br>
-                <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
+                <a href="" class="product-title">THE WITE ROSE</a><br><br>
+                <span class="price"><hr><br>$16.00  </span> <del>$19.00</del><br><br>
               </div>
               <div class="slide">
                 <div class="top-card">
-                <img src="images/img17.png" alt="image 17">
+                <img src="images/img17.png" alt="image 17" class="product-img">
                 <div class="search-icons">
                   <i class="fa fa-search"></i>
-                  <i class="fas fa-bag-shopping"></i>
+                  <i class="fas fa-bag-shopping add-cart"></i>
                   <i class="fa-solid fa-shuffle"></i>
                 </div>
               </div>
@@ -238,8 +230,8 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
-                <a href="">PINK FLOWER TREE</a><br><br>
-                <span class="price"><hr><br>$16.00  <del>$19.00</del></span><br><br>
+                <a href="" class="product-title">PNK FLOWER TREE</a><br><br>
+                <span class="price"><hr><br>$16.00  </span><del>$19.00</del><br><br>
               </div>
             </div>
           </div>
@@ -258,10 +250,10 @@
           <div class="slider">
             <div class="slide">
               <div class="top-card">
-              <img src="images/img16.png" alt="image 16">
+              <img src="images/img16.png" alt="image 16" class="product-img">
               <div class="search-icons">
                 <i class="fa fa-search"></i>
-                <i class="fas fa-bag-shopping"></i>
+                <i class="fas fa-bag-shopping add-cart"></i>
                 <i class="fa-solid fa-shuffle"></i>
               </div>
             </div>
@@ -272,15 +264,15 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
-              <a href="">PINK FLOWER TREE</a><br><br>
-              <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
+              <a href="" class="product-title">PINK FLOWER TRE</a><br><br>
+              <span class="price"><hr><br>$16.00  </span> <del>$19.00</del><br><br>
             </div>
             <div class="slide">
               <div class="top-card">
-              <img src="images/img17.png" alt="image 17">
+              <img src="images/img17.png" alt="image 17" class="product-img">
               <div class="search-icons">
                 <i class="fa fa-search"></i>
-                <i class="fas fa-bag-shopping"></i>
+                <i class="fas fa-bag-shopping add-cart"></i>
                 <i class="fa-solid fa-shuffle"></i>
               </div>
             </div>
@@ -291,15 +283,15 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
-              <a href="">PREMIUM JOYFUL</a><br><br>
-              <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
+              <a href="" class="product-title">PREMIUM JOYFULS</a><br><br>
+              <span class="price"><hr><br>$16.00  </span><del>$19.00</del> <br><br>
             </div>
             <div class="slide">
               <div class="top-card">
-              <img src="images/img18.png" alt="image 18">
+              <img src="images/img18.png" alt="image 18" class="product-img">
               <div class="search-icons">
                 <i class="fa fa-search"></i>
-                <i class="fas fa-bag-shopping"></i>
+                <i class="fas fa-bag-shopping add-cart"></i>
                 <i class="fa-solid fa-shuffle"></i>
               </div>
             </div>
@@ -310,15 +302,15 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
-              <a href="">THE WHITE ROSE</a><br><br>
-              <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
+              <a href="" class="product-title">THE WHITE ROSES</a><br><br>
+              <span class="price"><hr><br>$16.00  </span> <del>$19.00</del><br><br>
             </div>
             <div class="slide">
               <div class="top-card">
-              <img src="images/img19.png" alt="image 19">
+              <img src="images/img19.png" alt="image 19" class="product-img">
               <div class="search-icons">
                 <i class="fa fa-search"></i>
-                <i class="fas fa-bag-shopping"></i>
+                <i class="fas fa-bag-shopping add-cart"></i>
                 <i class="fa-solid fa-shuffle"></i>
               </div>
             </div>
@@ -329,15 +321,15 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
-              <a href="">PINK FLOWER TREE</a><br><br>
-              <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
+              <a href="" class="product-title">PINK FOWER TREE</a><br><br>
+              <span class="price"><hr><br>$16.00  </span> <del>$19.00</del><br><br>
             </div>
             <div class="slide">
               <div class="top-card">
-              <img src="images/img20.png" alt="image 20">
+              <img src="images/img20.png" alt="image 20" class="product-img">
               <div class="search-icons">
                 <i class="fa fa-search"></i>
-                <i class="fas fa-bag-shopping"></i>
+                <i class="fas fa-bag-shopping add-cart"></i>
                 <i class="fa-solid fa-shuffle"></i>
               </div>
             </div>
@@ -348,15 +340,15 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
-              <a href="">THE WHITE ROSE</a><br><br>
-              <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
+              <a href="" class="product-title">THE WHIE ROSE</a><br><br>
+              <span class="price"><hr><br>$16.00 </span> <del>$19.00</del><br><br>
             </div>
             <div class="slide">
               <div class="top-card">
-              <img src="images/img21.png" alt="image 21">
+              <img src="images/img21.png" alt="image 21" class="product-img">
               <div class="search-icons">
                 <i class="fa fa-search"></i>
-                <i class="fas fa-bag-shopping"></i>
+                <i class="fas fa-bag-shopping add-cart"></i>
                 <i class="fa-solid fa-shuffle"></i>
               </div>
             </div>
@@ -367,8 +359,8 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
-              <a href="">PINK FLOWER TREE</a><br><br>
-              <span class="price"><hr><br>$16.00  <del>$19.00</del></span><br><br>
+              <a href="" class="product-title">PINK FLOWER TEE</a><br><br>
+              <span class="price"><hr><br>$16.00  </span><del>$19.00</del><br><br>
             </div>
           </div>
         </div>
