incrementation du nombre et maj du solde

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
                 <a href="#" class="header__option--link">
                     <span class="handbag">
                     <i class="fas fa-bag-shopping" id="cart-icon"></i>
+                    <span class="cart-count">0</span>
                 </span>
                 </a>
                 <a href="#" class="header__option--link">
-                <h6 id="cart-text">Your Cart <br><span class="cash">$89.25</span></h6>
+                <h6 id="cart-text">Your Cart <br><span class="cash">$0</span></h6>
                 </a>  
                 <div class="cache">
                   <input type="checkbox" id="check">
